frontend/test/should_fail/index_count_return_value_mismatch.grg
#using "index_count_model.gm"

function f(ref s:O) : int
{
	return(42);
}

rule i {
	if{ f(countNodesFromIndex(fooi)) > 0; }
	
	modify {
	}
}
